# guicachefs

./: .gitignore  Cargo.toml  README.md
langs/: en-us.json
src/: frontend.rs  main.rs
src/app/: builder.rs  components.rs  listeners.rs  mod.rs
src/utils/: language.rs  mod.rs
